# internship-assistant

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
examples/: sample_job_posting.txt  sample_resume.txt
internship_assistant/: __init__.py  auth.py  cli.py  matcher.py  materials.py  priority.py  tracker.py
